updated readme, minor tweaks